include/dss_capi.h

    /*
    Set the Frequency for next solution
    */
    DSS_CAPI_DLL double Solution_Get_Frequency(void);
    /*
    Set Hour for time series solutions.
    */
    DSS_CAPI_DLL int32_t Solution_Get_Hour(void);
    /*
    Number of iterations taken for last solution. (Same as TotalIterations)
    */
    DSS_CAPI_DLL int32_t Solution_Get_Iterations(void);
    /*
    Default load multiplier applied to all non-fixed loads
    */
    DSS_CAPI_DLL double Solution_Get_LoadMult(void);
    /*
    Max allowable iterations.
    */
    DSS_CAPI_DLL int32_t Solution_Get_MaxIterations(void);
    /*
    Set present solution mode (by a text code - see DSS Help)
    */
    DSS_CAPI_DLL int32_t Solution_Get_Mode(void);
    /*
    Number of solutions to perform for Monte Carlo and time series simulations
    */
    DSS_CAPI_DLL int32_t Solution_Get_Number(void);
    /*
    Randomization mode for random variables "Gaussian", "Uniform" or "LogNormal"
    */
    DSS_CAPI_DLL void Solution_Set_Random(int32_t Random);
    /*
    Randomization mode for random variables "Gaussian", "Uniform" or "LogNormal"
    */
    DSS_CAPI_DLL int32_t Solution_Get_Random(void);
    /*
    Seconds from top of the hour.
    */
    DSS_CAPI_DLL double Solution_Get_Seconds(void);
    /*
    Time step size in sec
    */
    DSS_CAPI_DLL double Solution_Get_StepSize(void);
    /*
    Solution convergence tolerance.
    */
    DSS_CAPI_DLL double Solution_Get_Tolerance(void);
    /*
    Set year for planning studies
    */
    DSS_CAPI_DLL int32_t Solution_Get_Year(void);
    /*
    Set the Frequency for next solution
    */
    DSS_CAPI_DLL void Solution_Set_Frequency(double Value);
    /*
    Set Hour for time series solutions.
    */
    DSS_CAPI_DLL void Solution_Set_Hour(int32_t Value);
    /*
    Default load multiplier applied to all non-fixed loads
    */
    DSS_CAPI_DLL void Solution_Set_LoadMult(double Value);
    /*
    Max allowable iterations.
    */
    DSS_CAPI_DLL void Solution_Set_MaxIterations(int32_t Value);
    /*
    Set present solution mode (by a text code - see DSS Help)
    */
    DSS_CAPI_DLL void Solution_Set_Mode(int32_t Mode);
    /*
    Number of solutions to perform for Monte Carlo and time series simulations
    */
    DSS_CAPI_DLL void Solution_Set_Number(int32_t Value);
    /*
    Seconds from top of the hour.
    */
    DSS_CAPI_DLL void Solution_Set_Seconds(double Value);
    /*
    Time step size in sec
    */
    DSS_CAPI_DLL void Solution_Set_StepSize(double Value);
    /*
    Solution convergence tolerance.
    */
    DSS_CAPI_DLL void Solution_Set_Tolerance(double Value);
    /*
    Set year for planning studies
    */
    DSS_CAPI_DLL void Solution_Set_Year(int32_t Value);
    DSS_CAPI_DLL void Solution_Solve(void);
    /*
    ID (text) of the present solution mode
    */
    DSS_CAPI_DLL char* Solution_Get_ModeID(void);
    /*
    Load Model: {PowerFlow (default) | Admittance}
    */
    DSS_CAPI_DLL int32_t Solution_Get_LoadModel(void);
    /*
    Load Model: {PowerFlow (default) | Admittance}
    */
    DSS_CAPI_DLL void Solution_Set_LoadModel(int32_t Value);
    /*
    Load-Duration Curve name for LD modes
    */
    DSS_CAPI_DLL char* Solution_Get_LDCurve(void);
    /*
    Load-Duration Curve name for LD modes
    */
    DSS_CAPI_DLL void Solution_Set_LDCurve(char* Value);
    /*
    Percent default  annual load growth rate
    */
    DSS_CAPI_DLL double Solution_Get_pctGrowth(void);
    /*
    Percent default  annual load growth rate
    */
    DSS_CAPI_DLL void Solution_Set_pctGrowth(double Value);
    /*
    Type of device to add in AutoAdd Mode: {AddGen (Default) | AddCap}
    */
    DSS_CAPI_DLL int32_t Solution_Get_AddType(void);
    DSS_CAPI_DLL void Solution_Set_AddType(int32_t Value);
    /*
    Generator kW for AutoAdd mode
    */
    DSS_CAPI_DLL double Solution_Get_GenkW(void);
    DSS_CAPI_DLL void Solution_Set_GenkW(double Value);
    /*
    PF for generators in AutoAdd mode
    */
    DSS_CAPI_DLL double Solution_Get_GenPF(void);
    /*
    PF for generators in AutoAdd mode
    */
    DSS_CAPI_DLL void Solution_Set_GenPF(double Value);
    /*
    Capacitor kvar for adding capacitors in AutoAdd mode
    */
    DSS_CAPI_DLL double Solution_Get_Capkvar(void);
    /*
    Capacitor kvar for adding capacitors in AutoAdd mode
    */
    DSS_CAPI_DLL void Solution_Set_Capkvar(double Value);
    /*
    Base Solution algorithm: {NormalSolve | NewtonSolve}
    */
    DSS_CAPI_DLL int32_t Solution_Get_Algorithm(void);
    /*
    Base Solution algorithm: {NormalSolve | NewtonSolve}
    */
    DSS_CAPI_DLL void Solution_Set_Algorithm(int32_t Value);
    /*
    {Static* | Event | Time | Off} Modes for control devices (see ControlModes)
    */
    DSS_CAPI_DLL int32_t Solution_Get_ControlMode(void);
    DSS_CAPI_DLL void Solution_Set_ControlMode(int32_t Value);
    /*
    Default Multiplier applied to generators (like LoadMult)
    */
    DSS_CAPI_DLL double Solution_Get_GenMult(void);
    /*
    Default Multiplier applied to generators (like LoadMult)
    */
    DSS_CAPI_DLL void Solution_Set_GenMult(double Value);
    /*
    Default daily load shape (defaults to "Default")
    */
    DSS_CAPI_DLL char* Solution_Get_DefaultDaily(void);
    /*
    Default Yearly load shape (defaults to "Default")
    */
    DSS_CAPI_DLL char* Solution_Get_DefaultYearly(void);
    /*
    Default daily load shape (defaults to "Default")
    */
    DSS_CAPI_DLL void Solution_Set_DefaultDaily(char* Value);
    /*
    Default Yearly load shape (defaults to "Default")
    */
    DSS_CAPI_DLL void Solution_Set_DefaultYearly(char* Value);
    /*
    Array of strings containing the Event Log
    */
    DSS_CAPI_DLL void Solution_Get_EventLog(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Solution_Get_EventLog but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Solution_Get_EventLog_GR(void);
    /*
    Hour as a double, including fractional part
    */
    DSS_CAPI_DLL double Solution_Get_dblHour(void);
    /*
    Hour as a double, including fractional part
    */
    DSS_CAPI_DLL void Solution_Set_dblHour(double Value);
    /*
    Set Stepsize in Hr
    */
    DSS_CAPI_DLL void Solution_Set_StepsizeHr(double Value);
    /*
    Set Stepsize in minutes
    */
    DSS_CAPI_DLL void Solution_Set_StepsizeMin(double Value);
    /*
    Value of the control iteration counter
    */
    DSS_CAPI_DLL int32_t Solution_Get_ControlIterations(void);
    /*
    Maximum allowable control iterations
    */
    DSS_CAPI_DLL int32_t Solution_Get_MaxControlIterations(void);
    DSS_CAPI_DLL void Solution_Sample_DoControlActions(void);
    /*
    Value of the control iteration counter
    */
    DSS_CAPI_DLL void Solution_Set_ControlIterations(int32_t Value);
    /*
    Maximum allowable control iterations
    */
    DSS_CAPI_DLL void Solution_Set_MaxControlIterations(int32_t Value);
    DSS_CAPI_DLL void Solution_CheckFaultStatus(void);
    DSS_CAPI_DLL void Solution_SolveDirect(void);
    DSS_CAPI_DLL void Solution_SolveNoControl(void);
    DSS_CAPI_DLL void Solution_SolvePflow(void);
    DSS_CAPI_DLL void Solution_SolvePlusControl(void);
    DSS_CAPI_DLL void Solution_SolveSnap(void);
    DSS_CAPI_DLL void Solution_CheckControls(void);
    DSS_CAPI_DLL void Solution_InitSnap(void);
    /*
    Flag that indicates if elements of the System Y have been changed by recent activity.
    */
    DSS_CAPI_DLL uint16_t Solution_Get_SystemYChanged(void);
    DSS_CAPI_DLL void Solution_BuildYMatrix(int32_t BuildOption, int32_t AllocateVI);
    DSS_CAPI_DLL void Solution_DoControlActions(void);
    DSS_CAPI_DLL void Solution_SampleControlDevices(void);
    /*
    Flag to indicate whether the circuit solution converged
    */
    DSS_CAPI_DLL uint16_t Solution_Get_Converged(void);
    /*
    Flag to indicate whether the circuit solution converged
    */
    DSS_CAPI_DLL void Solution_Set_Converged(uint16_t Value);
    /*
    Total iterations including control iterations for most recent solution.
    */
    DSS_CAPI_DLL int32_t Solution_Get_Totaliterations(void);
    /*
    Max number of iterations required to converge at any control iteration of the most recent solution.
    */
    DSS_CAPI_DLL int32_t Solution_Get_MostIterationsDone(void);
    /*
    Flag indicating the control actions are done.
    */
    DSS_CAPI_DLL uint16_t Solution_Get_ControlActionsDone(void);
    DSS_CAPI_DLL void Solution_Set_ControlActionsDone(uint16_t Value);
    DSS_CAPI_DLL void Solution_Cleanup(void);
    DSS_CAPI_DLL void Solution_FinishTimeStep(void);
    /*
    Gets the time required to perform the latest solution (Read only)
    */
    DSS_CAPI_DLL double Solution_Get_Process_Time(void);
    /*
    Gets the accumulated time of the simulation
    */
    DSS_CAPI_DLL double Solution_Get_Total_Time(void);
    /*
    Sets the Accumulated time of the simulation
    */
    DSS_CAPI_DLL void Solution_Set_Total_Time(double Value);
    /*
    Get the solution process time + sample time for time step
    */
    DSS_CAPI_DLL double Solution_Get_Time_of_Step(void);
    /*
    Get/Set the Solution.IntervalHrs variable used for devices that integrate
    */
    DSS_CAPI_DLL double Solution_Get_IntervalHrs(void);
    /*
    Get/Set the Solution.IntervalHrs variable for custom solution algorithms
    */
    DSS_CAPI_DLL void Solution_Set_IntervalHrs(double Value);
    /*
    Minimum number of iterations required for a power flow solution.
    */
    DSS_CAPI_DLL int32_t Solution_Get_MinIterations(void);
    /*
    Mininum number of iterations required for a power flow solution.
    */
    DSS_CAPI_DLL void Solution_Set_MinIterations(int32_t Value);
    DSS_CAPI_DLL void Solution_SolveAll(void);
    DSS_CAPI_DLL void Solution_Get_IncMatrix(int32_t** ResultPtr, int32_t* ResultCount);
    /*
    Same as Solution_Get_IncMatrix but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Solution_Get_IncMatrix_GR(void);
    DSS_CAPI_DLL void Solution_Get_Laplacian(int32_t** ResultPtr, int32_t* ResultCount);
    /*
    Same as Solution_Get_Laplacian but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Solution_Get_Laplacian_GR(void);
    DSS_CAPI_DLL void Solution_Get_BusLevels(int32_t** ResultPtr, int32_t* ResultCount);
    /*
    Same as Solution_Get_BusLevels but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Solution_Get_BusLevels_GR(void);
    DSS_CAPI_DLL void Solution_Get_IncMatrixRows(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Solution_Get_IncMatrixRows but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Solution_Get_IncMatrixRows_GR(void);
    DSS_CAPI_DLL void Solution_Get_IncMatrixCols(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Solution_Get_IncMatrixCols but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Solution_Get_IncMatrixCols_GR(void);